tests/miniJava/neg/005050_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , while java ) { return 0 ; } }
